--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/multi-entry-selector/multi-entry-selector.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/multi-entry-selector/multi-entry-selector.component.html
@@ -33,7 +33,7 @@
       <div [formGroupName]="i">
         <span class="numbering" *ngIf="numbering">{{ i + 1 }}.</span>
         <mat-checkbox formControlName="entry">{{
-          entries[i].name
+          entries[i].value
         }}</mat-checkbox>
       </div>
     </div>
