--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration/ms-decoration.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration/ms-decoration.component.html
@@ -141,7 +141,7 @@
             <td>
               {{ e.flags?.join(", ") }}
             </td>
-            <td>{{ e.elements?.length || 0 }}</td>
+            <td style="text-align: center;">{{ e.elements?.length || 0 }}</td>
           </tr>
         </tbody>
       </table>
