Fixes to thesauri propagation in decoration

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration-element/ms-decoration-element.component.css
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration-element/ms-decoration-element.component.css
@@ -2,3 +2,11 @@
   width: 90%;
   max-width: 600px;
 }
+.type-head {
+  font-size: 90%;
+  border: 1px solid silver;
+  border-radius: 6px;
+  padding: 4px;
+  background-color: #fafafa;
+  text-align: center;
+}
