--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration/ms-decoration.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration/ms-decoration.component.html
@@ -89,12 +89,12 @@
             <th>type</th>
             <th>ranges</th>
             <th>flags</th>
-            <th>elems</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let e of elements?.value">
+          <tr *ngFor="let e of elements?.value; let i = index">
             <td>
+              {{ i + 1 }}.
               <button
                 type="button"
                 mat-icon-button
@@ -136,12 +136,11 @@
               {{ e.type }}
             </td>
             <td>
-              {{ rangesToString(e.ranges) }}
+              {{ rangesToString(e?.ranges) }}
             </td>
             <td>
               {{ e.flags?.join(", ") }}
             </td>
-            <td style="text-align: center;">{{ e.elements?.length || 0 }}</td>
           </tr>
         </tbody>
       </table>
@@ -150,7 +149,15 @@
         [disabled]="!editedElement"
         [expanded]="editedElement"
       >
-        <mat-expansion-panel-header>Element</mat-expansion-panel-header>
+        <mat-expansion-panel-header>
+          <mat-panel-title
+            >Element #{{ editedElementIndex + 1 }}</mat-panel-title
+          >
+          <mat-panel-description>{{
+            rangesToString(editedElement?.ranges)
+          }}</mat-panel-description>
+        </mat-expansion-panel-header>
+
         <itinera-ms-decoration-element
           [decElemTypeEntries]="decElemTypeEntries"
           [decElemFlagEntries]="decElemFlagEntries"
