Decoration element names

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration/ms-decoration.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration/ms-decoration.component.html
@@ -133,10 +133,10 @@
               </button>
             </td>
             <td>
-              {{ e.type }}
+              {{ typeToString(e.type) }}
             </td>
             <td>
-              {{ rangesToString(e?.ranges) }}
+              {{ rangesToString(e.ranges) }}
             </td>
             <td>
               {{ e.flags?.join(", ") }}
