Layout formula service

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-layout/ms-layout.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-layout/ms-layout.component.html
@@ -101,7 +101,7 @@
           <button
             mat-icon-button
             type="button"
-            matTooltip="Remove this item"
+            matTooltip="Remove this dimension"
             color="warn"
             (click)="removeDimension(i)"
           >
